--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@finsweet/developer-starter",
-  "version": "0.0.0",
-  "description": "Developer starter template for Finsweet projects.",
-  "homepage": "https://github.com/finsweet/developer-starter#readme",
+  "version": "1.0.0",
+  "description": "Landing page for the sale of photovoltaic panels",
+  "homepage": "https://github.com/ET33-StudioRelief/Verlaine",
   "license": "ISC",
   "keywords": [],
   "author": {
-    "name": "Finsweet",
-    "url": "https://finsweet.com/"
+    "name": "Studio Relief",
+    "url": "https://studiorelief.fr/"
   },
   "repository": {
     "type": "git",
@@ -52,7 +52,9 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "gsap": "^3.13.0",
+    "swiper": "^11.2.8"
   },
   "engines": {
     "pnpm": ">=10"
